2006-03-31  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Add polygon-polygon intersection.  This is not yet
	completely functional: right now it requires both
	polygons to be non-self-intersecting, and it still
	does not work in special situation such as two polygons
	with more than one or two common vertices.
	In such cases an InvalidImp is returned instead of the
	correct intersection polygon.

2006-02-28  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Various improvements concerning internal scripting usability
	such as: allow working with numeric/boolean labels (as input
	parameters), allow returning a number or a string, allow
	various constructions to depend on numeric labels

2006-03-15  Pino Toscano <toscano.pino@tiscali.it>

	* Allow python script editing

2005-11-24  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Restructuring CircularInversion. Creation of a
	special ObjectImpType representing 1D objects that kig
	knows how to invert: segments, lines, rays, arcs, circles.
	To maintain backward compatibility the load function from
	native kig save files authomatically translates old-style
	circular inversions into the new style, also presenting a
	warning to the user about this.

2005-11-24  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Added "vertical cubic". This is a cubic of the form
	y = p(x) with degree of p = 3.  It's arguments are
	4 through points.

2005-11-24  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Arc of conics are implemented as a new graphic object
	(inherited from ConicImp).  There is only one construction
	for them right now: Construct the conic arc with given endpoints,
	a "through" point and the conic center.
	Projective transformations are implemented and a circular arc
	can now be transformed with a generic affine or projective
	transformation.
	Three properties are implemented: supporting conic, first end-point
	and second end-point.
	The "support" property is also added to circular arcs, segments and
	rays.
